--- a/src/css/mainScreen.css
+++ b/src/css/mainScreen.css
@@ -13,13 +13,24 @@
   z-index: 2;
 }
 
+.mainScreen__video--gradient {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(0deg, rgba(254,254,254,1) 30%,
+  rgba(255,255,255,0) 100%);
+  z-index: 3;
+  position: absolute;
+  bottom: 80px;
+}
+
 .mainScreen__content {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4;
 }
 
 .mainScreen__titles {
@@ -46,4 +57,23 @@
 .mainScreen__visaCard {
   margin: 0 auto;
   display: block;
+}
+
+.mainScreen__blockGradient {
+  position: relative;
+  width: 428px;
+  margin: 0 auto;
+}
+
+.mainScreen__gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(135deg, rgba(255,255,255, 0.25),
+  rgba(255,255,255,0) 60%);
+  opacity: 0.3;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 20px 40px 34px rgba(154, 158, 188, 0.33);
 }
