--- a/src/css/services.css
+++ b/src/css/services.css
@@ -10,3 +10,16 @@
   border-radius: 8px;
   margin-bottom: 250px; /*delete this style*/
 }
+
+.services__subtitle {
+  font-size: 54px;
+  font-weight: bold;
+  color: #fff;
+  font-family: var(--fontRoboto);
+}
+
+.services__subtitleAdvertising {
+  font-size: 20px;
+  color: #fff;
+  font-family: var(--fontRoboto);
+}
