Added styles for service block

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,7 @@
 @import "mainScreen.css";
 @import "navbar.css";
 @import "services.css";
-@import "cards.css";
+@import "features.css";
 
 :root {
   --fontRoboto: "Roboto", sans-serif;
