--- a/src/css/mainScreen.css
+++ b/src/css/mainScreen.css
@@ -4,7 +4,9 @@
 }
 
 .mainScreen__video {
-  padding-bottom: 56.25%;
+  position: relative;
+  width: 100%;
+  height: 100vh;
 }
 
 .mainScreen__bgVideo {
@@ -13,7 +15,7 @@
   z-index: 2;
 }
 
-.mainScreen__video--gradient {
+.mainScreen__videoGradient {
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -21,7 +23,7 @@
   rgba(255,255,255,0) 100%);
   z-index: 3;
   position: absolute;
-  bottom: 0;
+  top: 130px;
 }
 
 .mainScreen__content {
