--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,13 +1,20 @@
 .navbar {
   width: 100%;
   height: auto;
-  position: absolute;
-  top: 25px;
+  position: fixed;
+  top: 0;
+  display: block;
+  padding-top: 25px;
+  transition: all 0.7s;
+}
+
+.navbar_fixed {
+  background: #000;
+  border-bottom: transparent;
+  z-index: 999;
 }
 
 .navbar__wrap {
-  position: sticky;
-  top: 5px;
   width: var(--withMainContent);
   border-bottom: 1px solid rgba(255, 255, 255, 0.7);
   margin: 0 auto;
